--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Mikecroft.github.io</h1>
-        <p class="header"></p>
+        <h1 class="header">Mike Croft</h1>
+        <p class="header">A personal blog</p>
 
 
 
