--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Mike Croft
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in paginator.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li class=post-title><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
       <li>{{ post.excerpt }}</li>
     {% endfor %}
   </ul>
