--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Mike Croft
 
   {% for page in (1..paginator.total_pages) %}
     {% if page == paginator.page %}
-      <em>{{ page }}</em>
+      <b>{{ page }}</b>
     {% elsif page == 1 %}
       <a href="{{ '/' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
     {% else %}
